[package]
name = "wip_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

###
### FEATURES
###

[features]
# May improve performance on specific platforms.
weak-operations = []

###
### DEPENDENCIES
###

[dependencies]

# INTERNAL
wip_primal.workspace = true

# EXTERNAL
num.workspace = true
tokio.workspace = true
noise.workspace = true
bevy.workspace = true
libloading.workspace = true
weighted_rand.workspace = true
rand.workspace = true